Integrate LoRA-XS but currently very inefficient as  model being recomputed every sample

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 bashfiles/
 log_error/
 log_output/
-
+output/
+model_checkpoints/
+*.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
