--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ output/
 model_checkpoints/
 please_first_test/
 *.json
+metrics_by_rank_epoch/
+authors.txt
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
